# parliament-parser

./: .gitignore  attendance_line_type.py  cleaining.py  constants.py  data.html  data.json  data.md  gpt.json  gpt.py  main.json  main.py  markdown.md  markdown.py  oral_answer_section.md  oral_answer_section.py  oral_answers.md  oral_answers.py  pyproject.toml  test.py  transcript_line_type.py
gpt_parser/: attendance.py  debate_line.py  debate_title.py  debate_title_lines.py  handsard_metadata.py  mps.py
sample_output/: 04-11-1964.json  13-12-1957.json  18-07-1957.json  19-12-1957.json  23-01-1962.json
tagging/: attendance.py  section.py  speaker.py  speech.py  speech_type.py  topic.py  transcript.py
